feat: implement interactive trainers (B-03) and abilities (B-04)
- Introduced ActionResolutionPhase and SelectCardsAction for trainers
- Implemented state tracking for abilities (abilityUsedThisTurn)
- Handled Great Ball, Max Revive, Professor's Letter flow
- Fixed DTOs and Engine integration for selections
- Verified all engine tests